-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 RC 1, 5.0.0
-
None
-
5e7e5b76a75a5bc7b0c39cc9b233d77b6e0600e7, 9115a6c2e018e18b378df1fede821e67ee364340
In the spirit of modularization, developers would like to put the documentation for an example with the example source files. But qdoc doesn't include any files in the exampledirs directories in its list of source files to parse as documentation. qdoc should traverse the exampledirs directories and include any .qdoc files it finds there in its source list.